RESOLVED FIXED12799
REGRESSION: Webpage doesn't load correctly (www.cincinnati.com redirects to the wrong URL)
https://bugs.webkit.org/show_bug.cgi?id=12799
Summary REGRESSION: Webpage doesn't load correctly (www.cincinnati.com redirects to t...
Tom
Reported 2007-02-17 13:14:01 PST
After multiple attempts to open the webpage http://www.cincinnati.com in Webkit, the site reports an error that the page could not be found. However, it loads fine in Safari 2.0 and Firefox 2.0.
Attachments
proposed fix (6.78 KB, patch)
2007-02-18 03:55 PST, Alexey Proskuryakov
hyatt: review+
Alexey Proskuryakov
Comment 1 2007-02-18 01:13:21 PST
Looks like the problem is that we are not treating a newline as whitespace here: <META HTTP-EQUIV = "Refresh" Content = "0; URL=http://news.cincinnati.com/apps/pbcs.dll/section?Category=CINCI">
Alexey Proskuryakov
Comment 2 2007-02-18 03:55:22 PST
Created attachment 13222 [details] proposed fix The test doesn't really need to be an HTTP one, but I wanted to put it next to other refresh/redirect tests.
Dave Hyatt
Comment 3 2007-02-18 04:10:16 PST
Comment on attachment 13222 [details] proposed fix r=me
Alexey Proskuryakov
Comment 4 2007-02-18 05:00:07 PST
Committed revision 19691.
Note You need to log in before you can comment on or make changes to this bug.